force-app/main/default/objects/numm__FA_Section__c/numm__FA_Section__c.object-meta.xml
<CustomObject>
    <description>Rubriques des immobilisations</description>
    <label>FA Rubrique</label>
    <nameField>
        <displayFormat>FARub-{000000}</displayFormat>
        <label>Rubrique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FA Rubriques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>