force-app/main/default/objects/numm__FA_Section__c/fields/numm__FA_Fixed_Asset__c.field-meta.xml
<CustomField>
    <fullName>numm__FA_Fixed_Asset__c</fullName>
    <label>FA Fiche</label>
    <referenceTo>numm__FA_Fixed_Asset__c</referenceTo>
    <relationshipLabel>FA Rubriques</relationshipLabel>
    <relationshipName>FA_Rubriques</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>