force-app/main/default/objects/numm__FA_Section__c/fields/numm__IdSection__c.field-meta.xml
<CustomField>
    <fullName>numm__IdSection__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>IdRub</label>
    <type>AutoNumber</type>
</CustomField>