force-app/main/default/objects/numm__FA_Section__c/fields/numm__Section10__c.field-meta.xml
<CustomField>
    <fullName>numm__Section10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrique 10</label>
    <referenceTo>numm__Section__c</referenceTo>
    <relationshipLabel>FA Rubriques (Rubrique 10)</relationshipLabel>
    <relationshipName>FA_Rubriques9</relationshipName>
    <type>Lookup</type>
</CustomField>