force-app/main/default/objects/numm__FA_Section__c/fields/numm__Section2__c.field-meta.xml
<CustomField>
    <fullName>numm__Section2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrique 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__Type__c</field>
            <operation>equals</operation>
            <value>Immobilisation</value>
        </filterItems>
        <filterItems>
            <field>numm__Section__c.numm__Axe_Rubrique__r.numm__NumSection__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>numm__Section__c</referenceTo>
    <relationshipLabel>FA Rubriques (Rubrique 2)</relationshipLabel>
    <relationshipName>FA_Rubriques1</relationshipName>
    <type>Lookup</type>
</CustomField>