force-app/main/default/objects/numm__FA_Section__c/fields/numm__SectionFree1__c.field-meta.xml
<CustomField>
    <fullName>numm__SectionFree1__c</fullName>
    <label>Rubrique Libre 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>