force-app/main/default/objects/numm__FA_Section__c/fields/numm__SectionFree2__c.field-meta.xml
<CustomField>
    <fullName>numm__SectionFree2__c</fullName>
    <label>Rubrique Libre 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>